# MindMirror

./: .env  .gitignore  CHECKPOINT_MOVEMENT_RELATIONSHIPS.md  CLAUDE.md  Dockerfile  Dockerfile.agent  Dockerfile.api  Dockerfile.journal  Dockerfile.qdrant  Dockerfile.ui  Makefile  README.md  README.roadmap.md  README.vision.md  REFACTORING_PLAN.md  TEST_PN_IMPORT.md  api.py  app.py  chatgpt.txt  config.py  docker-compose.yml  env.example  env.local  pyproject.toml  setup.sh
celery-worker/: Dockerfile  README.md  pyproject.toml  start-web.sh  start-worker.sh  start.sh  test_fixes.py
celery-worker/src/: __init__.py  app.py  celery_app.py  config.py
celery-worker/src/clients/: __init__.py  agent_service_client.py  gcs_client.py  journal_client.py  pubsub_client.py  qdrant_client.py  queries.py
celery-worker/src/models/: __init__.py  task_models.py
celery-worker/src/tasks/: __init__.py  health_tasks.py  journal_tasks.py  task_processors.py  tradition_tasks.py
celery-worker/src/utils/: __init__.py  async_utils.py  embedding.py  logging_config.py  message_processor.py
celery-worker/tests/: conftest.py  test_basic.py  test_config.py  test_embeddings.py  test_journal_client.py  test_message_processor.py  test_pubsub_client.py  test_qdrant_client.py  test_search_and_index.py  test_task_processors.py  test_tasks.py
cli/: Dockerfile  IDEMPOTENT_FIXES.md  IMPORT_STRATEGY.md  README.md  STANDALONE_IMPORTERS.md  VIDEO_URL_HANDLING.md  inspect_schema.sql  pn_csv_importer.py  pyproject.toml  standalone_habits_import.py  standalone_movements_import.py  standalone_pn_import.py
cli/src/mindmirror_cli/: __init__.py  main.py
habits_service/: Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
habits_service/alembic/: README  env.py
habits_service/alembic/versions/: 001_initial_schema.py  02ed21bd1144_init.py  189b1231afd4_bootstrap_tables.py  3b7a1d2e4f56_soft_delete_program_templates.py  856cf9d18d0a_bootstrap_tables.py
habits_service/habits/app/: config.py  main.py
habits_service/habits_service/alembic/: env.py
habits_service/habits_service/app/: config.py  main.py
habits_service/tests/: conftest.py
habits_service/tests/integration/: test_acl_write_repos.py  test_event_write_repos.py  test_gql_lesson_detail.py  test_gql_lessons_for_habit.py  test_gql_mutations.py  test_gql_program_step_lessons.py  test_gql_program_steps.py  test_gql_queries.py  test_repos_read_unit.py  test_structural_write_repos.py  test_template_write_repos.py
habits_service/tests/unit/: test_lesson_loader.py  test_lesson_render_service.py  test_planner.py  test_read_repository_stubbed.py
journal_service/: Dockerfile  README.md  __init__.py  alembic.ini  pyproject.toml
journal_service/alembic/: env.py
journal_service/alembic/versions/: 001_initial_schema.py
journal_service/clients/: __init__.py
journal_service/journal/: __init__.py  main.py  uow.py
journal_service/journal/app/: __init__.py  config.py
journal_service/models/: __init__.py  pydantic.py
journal_service/models/sql/: __init__.py  base.py  journal.py
journal_service/tests/: __init__.py  conftest.py  test_gql_journal_entries_for_habit.py
meals_service/: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
meals_service/alembic/: README  env.py  script.py.mako
meals_service/alembic/versions/: 0001_init.py  0002_off_fields.py  001_initial_schema.py
meals_service/db/: seeder.py
meals_service/db/sql/: 001_init.sql
meals_service/meals/: __init__.py
meals_service/meals/domain/: __init__.py
meals_service/meals/repository/: __init__.py  database.py  uow.py
meals_service/meals/service/: off_client.py  off_mapping.py
meals_service/meals/web/: app.py  config.py  server.py
meals_service/tests/: __init__.py  conftest.py
meals_service/tests/repository/: test_food_item_repository.py  test_meal_repository.py  test_user_goals_repository.py  test_water_consumption_repository.py
meals_service/tests/service/: test_food_item_service.py  test_meal_service.py  test_user_goals_service.py  test_water_consumption_service.py
meals_service/tests/web/: test_graphql_mutations.py  test_graphql_queries.py
movements_service/: Dockerfile  MIGRATION_GUIDE.md  alembic.ini  pyproject.toml
movements_service/alembic/: env.py
movements_service/alembic/versions/: 0001_init.py  0002_add_metadata_jsonb.py  0003_add_description_column.py
movements_service/data/: alter_movements_external.sql  fitness_2.9.csv
movements_service/movements/clients/: composite_client.py  exercisedb_api_client.py  local_db_client.py
movements_service/movements/mappers/: external_to_local.py
movements_service/movements/repository/: database.py  models.py  movements_repo.py
movements_service/movements/service/: cli.py  csv_importer.py  exercisedb_client.py  pn_csv_importer.py
movements_service/tests/: conftest.py  test_exercisedb_api_client.py  test_graphql_search_and_import.py  test_mapper_external_to_local.py  test_movements_basic.py  test_repo_idempotent_import.py
practices_service/: .gitignore  Dockerfile  README.md  pyproject.toml  tox.ini
practices_service/alembic/: README  env.py
practices_service/db/: config.json  seeder.py
practices_service/tests/: conftest.py  helpers.py
src/agent_service/: Dockerfile  README.md  __init__.py  celery_app.py  chain.py  data_processing.py  database.py  embedding.py  engine.py  graph.py  journal_indexer.py  llm.py  loading.py  pyproject.toml  qdrant_data_processing.py  qdrant_engine.py  tasks.py  uow.py
src/agent_service/agents/: state.py
src/alembic-config/: README.md  alembic.ini  pyproject.toml
src/shared/: README.md  __init__.py  auth.py  data_models.py  pyproject.toml  secrets.py
users_service/: .coverage  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  test_coaching.py  tox.ini
users_service/alembic/: README  env.py
users_service/migrations/: 001_initial_schema.sql  002_coach_client_relationships.sql  003_add_user_profile_fields.sql
users_service/tests/: __init__.py  conftest.py  helpers.py  test_models.py
users_service/users/: __init__.py
(+1219 files in other folders)
