[tool.poetry]
name = "librarian-ai"
version = "0.1.0"
description = "Your Personal AI-Powered Library Agent"
authors = ["Gemini"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
openai = "^1.37.0"
tiktoken = "^0.7.0"
faiss-cpu = "^1.8.0"
PyMuPDF = "^1.24.9"
networkx = "^3.3"
python-dotenv = "^1.0.1"
streamlit = "^1.37.0"
uvicorn = "^0.30.3"
langchain-experimental = "^0.3.4"
langchain-community = "^0.3.25"
langchain-openai = "^0.3.22"
langchain-ollama = "^0.3.3"
langchain = "^0.3.25"
langgraph = "^0.4.8"
strawberry-graphql = {extras = ["fastapi"], version = "^0.273.0"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-mock = "^3.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
