[tool.poetry]
name = "librarian-ai"
version = "0.1.0"
description = "Your Personal AI-Powered Library Agent"
authors = ["Gemini"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
openai = "^1.37.0"
tiktoken = "^0.7.0"
faiss-cpu = "^1.8.0"
PyMuPDF = "^1.24.9"
networkx = "^3.3"
python-dotenv = "^1.0.1"
streamlit = "^1.37.0"
uvicorn = "^0.30.3"
langchain-experimental = "^0.3.4"
langchain-community = "^0.3.25"
langchain-openai = "^0.3.22"
langchain-ollama = "^0.3.3"
langchain = "^0.3.25"
langgraph = "^0.4.8"
strawberry-graphql = {extras = ["fastapi"], version = "^0.273.0"}
aiohttp = "^3.12.12"
sqlalchemy = "^2.0.41"
asyncpg = "^0.30.0"
alembic = "^1.16.1"
pydantic = {extras = ["email"], version = "^2.11.5"}
httpx = "^0.28.1"
pyjwt = "^2.10.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-mock = "^3.14.1"
httpx = "^0.28.1"
pytest-asyncio = "^1.0.0"
docker = "^7.1.0"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
