[tool.poetry]
name = "librarian-ai"
version = "0.1.0"
description = "Your Personal AI-Powered Library Agent"
authors = ["Gemini"]
readme = "README.md"
packages = [
    {include = "shared", from = "src"},
    {include = "agent_service", from = "src"},
    {include = "journal_service", from = "src"}
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
openai = "^1.37.0"
tiktoken = "^0.7.0"
faiss-cpu = "^1.8.0"
PyMuPDF = "^1.24.9"
networkx = "^3.3"
python-dotenv = "^1.0.1"
streamlit = "^1.37.0"
uvicorn = "^0.30.3"
langchain-experimental = "^0.3.4"
langchain-community = "^0.3.25"
langchain-openai = "^0.3.22"
langchain-ollama = "^0.3.3"
langchain = "^0.3.25"
langgraph = "^0.4.8"
strawberry-graphql = {extras = ["fastapi"], version = "^0.273.0"}
aiohttp = "^3.12.12"
sqlalchemy = "^2.0.41"
asyncpg = "^0.30.0"
alembic = "^1.16.1"
pydantic = {extras = ["email"], version = "^2.11.5"}
httpx = "^0.28.1"
pyjwt = "^2.10.1"
qdrant-client = "^1.14.2"
celery = "^5.5.3"
redis = "^6.2.0"
flower = "^2.0.1"
prometheus-client = "^0.22.1"
google-cloud-storage = "^3.1.0"
pytest-mock = "^3.14.1"
pytest-docker = "^3.2.2"
pytest-celery = "^1.2.0"
tenacity = "^9.1.2"
litellm = "^1.72.6.post1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-mock = "^3.14.1"
pytest-docker = "^3.2.2"
pytest-celery = "^1.2.0"
httpx = "^0.28.1"
docker = "^7.1.0"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
pytest-asyncio = "^1.0.0"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
