[tool.poetry]
name = "celery-worker"
version = "0.1.0"
description = "Celery worker service for MindMirror"
authors = ["MindMirror Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "0.35.0"
celery = "^5.3.0"
redis = "^5.0.0"
httpx = "^0.24.0"
pydantic = "^2.0.0"
langchain = "^0.1.0"
langchain-community = "^0.0.10"
google-cloud-storage = "^2.10.0"
qdrant-client = "^1.6.0"
sentence-transformers = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^1.0.0"
pytest = "^8.4.1"
pytest-celery = "<=1.1.0"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"] 