[tool.poetry]
name = "mindmirror-cli"
version = "0.1.0"
description = "CLI tools for MindMirror knowledge base management"
authors = ["MindMirror Team <team@mindmirror.ai>"]
readme = "README.md"
packages = [{include = "mindmirror_cli", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11,<4.0.0"
typer = "^0.16.0"
langchain = "^0.3.26"
langchain-ollama = "^0.3.3"
langchain-openai = "^0.3.27"
langchain-community = "^0.3.26"
rich = "^14.0.0"
qdrant-client = "^1.14.3"
google-cloud-storage = "^3.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.10.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.0.0"

[tool.poetry.scripts]
mindmirror = "mindmirror_cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 