[tool.poetry]
name = "mindmirror-cli"
version = "0.1.0"
description = "CLI tools for MindMirror knowledge base management"
authors = ["MindMirror Team <team@mindmirror.ai>"]
readme = "README.md"
packages = [{include = "mindmirror_cli", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11,<3.13.0"
typer = "^0.16.0"
langchain = "^0.3.26"
langchain-ollama = "^0.3.3"
langchain-openai = "^0.3.27"
langchain-community = "^0.3.26"
rich = "^14.0.0"
qdrant-client = "^1.14.3"
google-cloud-storage = "^3.1.1"
alembic = "^1.16.2"
sqlalchemy = "^2.0.41"
asyncpg = "^0.30.0"
python-dotenv = "^1.1.1"
psycopg2-binary = "^2.9.10"
alembic-config = {path = "../src/alembic-config", develop = true}
content-parser = {path = "../tools/content_parser", develop = true}
habits-service = {path = "../habits_service", develop = true}
PyYAML = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.10.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.0.0"
pytest-postgresql = "^7.0.2"
testcontainers = "^4.10.0"

[tool.poetry.scripts]
mindmirror = "mindmirror_cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 
