[tool.poetry]
name = "movements"
version = "0.1.0"
description = "Service for managing movements/exercises, search, and GraphQL API."
authors = ["Peleke <kraken@peleke.33mail.com>"]
packages = [
    { include = "movements" },
    { include = "shared", from = "../src" }
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0.0"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic = "^2.10.6"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.40"}
asyncpg = "^0.30.0"
alembic = "^1.15.1"
httpx = "^0.28.1"
strawberry-graphql = {version = "^0.268.1"}
psycopg2-binary = "^2.9.11"
shared = { path = "../src/shared" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.26.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 