[tool.poetry]
name = "alembic-config"
version = "0.1.0"
description = "Alembic configuration and utilities for MindMirror"
authors = ["MindMirror Team"]
readme = "README.md"
packages = [{include = "alembic_config"}]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.13.0"
sqlalchemy = "^2.0.0"
asyncpg = ">=0.30.0,<0.31.0"
psycopg2-binary = "^2.9.0"
python-dotenv = "^1.0.0"
pydantic = "^2.11.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 
